# Bitwise-trie

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  binary.hxx  bitnode.hxx  bitwisetrie.hxx  gtest.cxx  main.cpp  main.cxx
